Se agregan actualizaciones y puntos pendientes del release 4.3