@@ -1,7 +1,7 @@
 package com.logicalis.apisolver.controller;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 import javax.servlet.http.HttpServletResponse;
@@ -76,18 +76,23 @@ public ResponseEntity<?> loginAD(@RequestBody Map<String, String> body) {
     headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
     headers.setBasicAuth("angularapp", "12345");
 
+     try {
     // Construir el cuerpo como string (igual que el frontend)
     String form = "grant_type=password" +
-            "&username=" + URLEncoder.encode(email, StandardCharsets.UTF_8) +
-            "&password=" + URLEncoder.encode(password, StandardCharsets.UTF_8);
+            "&username=" + URLEncoder.encode(email, "UTF-8") +
+            "&password=" + URLEncoder.encode(password, "UTF-8");
 
     HttpEntity<String> request = new HttpEntity<>(form, headers);
 
     RestTemplate restTemplate = new RestTemplate();
-    try {
+
         String tokenUrl = baseUrl + "/oauth/token";
         ResponseEntity<String> response = restTemplate.postForEntity(tokenUrl, request, String.class);
         return ResponseEntity.ok(response.getBody());
+
+      } catch (UnsupportedEncodingException e) {
+        // Esto no debería pasar, ya que "UTF-8" siempre está presente
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error de codificación");
     } catch (HttpClientErrorException e) {
         return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Login con AD falló");
     }
